@@ -541,6 +541,7 @@ Stephen Smoogen                     smooge@mindspring.com
 Steve McConnel                      steve@acadcomp.sil.org
 Steve McIntyre                      steve@einval.com
 Steve Ward                          planet36@gmail.com
+Steven Drake                        sbd@users.sourceforge.net
 Steven G. Johnson                   stevenj@alum.mit.edu
 Steven Mocking                      ufo@quicknet.nl
 Steven Parkes                       smparkes@smparkes.net
